# Halligan

./: LICENSE  README.md
halligan/: .env.example  .gitignore  basic_test.py  execute.py  generate.py  get_models.sh  pyproject.toml  samples.py
halligan/cache/: amazon.py  arkose_multichoice_card.py  arkose_multichoice_counting.py  arkose_multichoice_dice_pair.py  arkose_multichoice_galaxies.py  arkose_multichoice_hand_number.py  arkose_multichoice_rotated.py  arkose_multichoice_square_icon.py  arkose_paged_3d_rollball_objects.py  arkose_paged_dice_match.py  arkose_paged_numbermatch.py  arkose_paged_orbit_match_game.py  arkose_paged_rockstack.py  baidu.py  botdetect.py  geetest_gobang.py  geetest_icon.py  geetest_iconcrush.py  geetest_slide.py  hcaptcha.py  lemin.py  mtcaptcha.py  recaptchav2.py  tencent.py  yandex_kaleidoscope.py  yandex_text.py
halligan/halligan/: LICENSE  README.md
halligan/halligan/agents/: agent.py
halligan/snapshots/: amazon.txt  arkose_multichoice_card.txt  arkose_multichoice_counting.txt  arkose_multichoice_dice_pair.txt  arkose_multichoice_galaxies.txt  arkose_multichoice_hand_number.txt  arkose_multichoice_rotated.txt  arkose_multichoice_square_icon.txt  arkose_paged_3d_rollball_objects.txt  arkose_paged_dice_match.txt  arkose_paged_numbermatch.txt  arkose_paged_orbit_match_game.txt  arkose_paged_rockstack.txt  baidu.txt  botdetect.txt  geetest_gobang.txt  geetest_icon.txt  geetest_iconcrush.txt  geetest_slide.txt  hcaptcha.txt  lemin.txt  mtcaptcha.txt  recaptchav2.txt  tencent.txt  yandex_kaleidoscope.txt  yandex_text.txt
(+159 files in other folders)
