[project]
authors = [{name = "Xiwen Teoh", email = "teoh6g@gmail.com"}]
name = "halligan"
requires-python = "==3.12.4"
version = "0.1.0"
dependencies = ["opencv-python>=4.10,<5", "playwright==1.52.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
scikit-image = ">=0.25.2,<0.26"
scipy = ">=1.15.2,<2"
faiss-gpu = ">=1.9.0,<2"
nbformat = ">=5.10.4,<6"
pillow = ">=11.2.1,<12"
python-dotenv = ">=1.1.0,<2"
ultralytics = "==8.2.51"
transformers = "==4.42.4"
pytorch = "==2.3.1"
torchvision = "==0.18.1"
openai = ">=1.82.0,<2"
pytest = ">=8.3.5,<9"

[tool.pixi.pypi-dependencies]
clip = { path = "./halligan/models/CLIP", editable = true }

[tool.pixi.feature.cuda]
system-requirements = {cuda = "12.1"}

[tool.pixi.environments]
cuda = ["cuda"] 
